--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,9 +6,13 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
-/* * {
+* {
 box-sizing: border-box;
-} */
+}
+
+.examimg {
+	box-shadow: 0px 0px 15px 5px rgba(204, 204, 204, 0.473);
+}
 
 /* Position the image container (needed to position the left and right arrows) */
 .container {
@@ -58,15 +62,6 @@ border-radius: 3px 0 0 3px;
 .prev:hover,
 .next:hover {
 background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-color: #f2f2f2;
-font-size: 0px;
-padding: 8px 12px;
-position: absolute;
-top: 0;
 }
 
 /* Container for image text */
@@ -812,6 +807,35 @@ input, select, textarea {
 				height: 4.5em;
 				margin-left: -2.5em;
 			}
+
+		input[type="button"].up,
+		input[type="submit"].up,
+		input[type="reset"].up,
+		.button.up,
+		button.up {
+			width: 5em;
+			height: 5em;
+			line-height: 4.5em;
+			padding: 0;
+			background-image: url("images/dark-arrow.svg");
+			transform: rotate(180deg);
+			background-position: center center;
+			background-repeat: no-repeat;
+			text-indent: -10em;
+			overflow: hidden;
+		}
+	
+			input[type="button"].up.anchored,
+			input[type="submit"].up.anchored,
+			input[type="reset"].up.anchored,
+			.button.up.anchored,
+			button.up.anchored {
+				top: 0;
+				border-bottom: 0;
+				border-radius: 3em 3em 0 0;
+				height: 4.5em;
+				margin-left: -2.5em;
+			}	
 
 		input[type="button"].anchored,
 		input[type="submit"].anchored,
@@ -2363,7 +2387,7 @@ input, select, textarea {
 
 	#one {
 		/* background: url("images/overlay.png"), url("../../images/lobby.jpg"); */
-		background: url("../../images/lobby/lobby.jpg");
+		background: url("images/overlay.png"), url("../../images/lobby/lobby.jpg");
 		/* background-size: 256px 256px, cover; */
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
@@ -2373,9 +2397,59 @@ input, select, textarea {
 
 	#two {
 		/* background: url("images/overlay.png"), url("../../images/two.jpg"); */
-		background: url("../../images/examroom/2.jpg");
+		background: url("images/overlay.png"), url("../../images/examroom/2.jpg");
 		/* background-size: 256px 256px, cover; */
 		background-size: 1300px, cover;
+		background-attachment: fixed, fixed;
+		background-position: top left, center center;
+	}
+
+	/* One */
+
+	#exam1 {
+		background: url("images/overlay.png"), url("../../images/intro.jpg");
+		/* background: url("../../images/lobby/lobby.jpg"); */
+		background-size: 256px 256px, cover;
+		background-attachment: fixed, fixed;
+		background-position: top left, center center;
+	}
+
+	#exam2 {
+		background: url("images/overlay.png"), url("../../images/one.jpg");
+		/* background: url("../../images/lobby/lobby.jpg"); */
+		background-size: 256px 256px, cover;
+		background-attachment: fixed, fixed;
+		background-position: top left, center center;
+	}
+
+	#exam3 {
+		background: url("images/overlay.png"), url("../../images/two.jpg");
+		/* background: url("../../images/lobby/lobby.jpg"); */
+		background-size: 256px 256px, cover;
+		background-attachment: fixed, fixed;
+		background-position: top left, center center;
+	}
+
+	#exam4 {
+		background: url("images/overlay.png"), url("../../images/intro.jpg");
+		/* background: url("../../images/lobby/lobby.jpg"); */
+		background-size: 256px 256px, cover;
+		background-attachment: fixed, fixed;
+		background-position: top left, center center;
+	}
+
+	#exam5 {
+		background: url("images/overlay.png"), url("../../images/one.jpg");
+		/* background: url("../../images/lobby/lobby.jpg"); */
+		background-size: 256px 256px, cover;
+		background-attachment: fixed, fixed;
+		background-position: top left, center center;
+	}
+
+	#exam6 {
+		background: url("images/overlay.png"), url("../../images/two.jpg");
+		/* background: url("../../images/lobby/lobby.jpg"); */
+		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
 	}
